manifests/test/cloudflare-gateway/ServiceMonitor-cloudflare-image-metrics-monitor.yaml
apiVersion: monitoring.coreos.com/v1
kind: ServiceMonitor
metadata:
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: cloudflare-kubernetes-gateway
    control-plane: image
  name: cloudflare-image-metrics-monitor
  namespace: cloudflare-gateway
spec:
  endpoints:
    - path: /metrics
      port: http
      scheme: http
  namespaceSelector:
    any: true
  selector:
    matchLabels:
      control-plane: image
